--- a/build.gradle
+++ b/build.gradle
@@ -38,3 +38,12 @@ dependencies {
     // https://mvnrepository.com/artifact/org.mongodb/mongodb-driver-sync
     compile group: 'org.mongodb', name: 'mongodb-driver-sync', version: '3.8.2'
 }
+
+// if you have source imports issues, add the below
+sourceSets.main.java.srcDir new File(buildDir, 'generated/source')
+idea {
+    module {
+        // Marks the already(!) added srcDir as "generated"
+        generatedSourceDirs += file('build/generated/source')
+    }
+}
